--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="card">
           <div class="card-block">
             <h2>Projects (First Semester)</h2>
+            <a href="portfolio.html">Portfolio</a>
             <div class="row">
               <div class="col-md-4">
                 <img src="./assets//-02.jpg" class="img-responsive" alt="">
@@ -182,23 +183,6 @@
           </div>
           </div>
         </div>
-        
-        <div class="card">
-          <div class="card-block">
-            <h2>Social Network</h2>
-            <div class="row">
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-3">
-              </div>
-              <div class="col-md-3">
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
 </main>
 <footer class="footer-container white-text-container text-center">
   <div class="container">
