--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+
+
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
@@ -17,7 +19,10 @@
 
   <title>Title page</title>  
 
-<link href="./main.d8e0d294.css" rel="stylesheet"></head>
+<link href="./main.d8e0d294.css" rel="stylesheet">
+
+  <script type="text/javascript" src="js/processing.js"></script>
+</head>
 
 <body class="">
 
@@ -32,7 +37,7 @@
 
 
 
-<!-- Add your site or app content here -->
+
  
  <div class="container">
    <div class="row">
@@ -57,7 +62,7 @@
 
         <div class="card">
           <div class="card-block">
-            <h2>Projects (First Semester)</h2>
+            <h2>Projects</h2>
             <a href="portfolio.html">Portfolio</a>
             <div class="row">
               <div class="col-md-4">
